<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.add_party.AddPartyActivity">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/partyInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/party"
        app:shapeAppearance="@style/cornerRounded_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/partyEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textAppearance="@style/InputTextAppearance"
            android:textColor="@color/colorSecondary" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_8sdp"
        android:hint="@string/address_"
        app:shapeAppearance="@style/cornerRounded_TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:maxLines="5"
            android:textAppearance="@style/InputTextAppearance"
            android:textColor="@color/colorSecondary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:letterSpacing="0"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@null"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
        app:rippleColor="@color/black" />

</LinearLayout>